syntax = "proto3";

package msg;

import "google/protobuf/timestamp.proto";


option go_package = "mioty-bssci-adapter/internal/api/msg";

message ProtoBasestationMessage {
    // Basestation EUI, 8 bytes little endian
    uint64 bs_eui = 1;
    // Message.
    oneof message {
        // Connect
        BasestationConnection con = 3;
        // Status
        BasestationStatus status = 4;
        // VM Status
        BasestationVariableMacStatus vm_status = 5;
    }
}

// Connect
message BasestationConnection {
    // Unix UTC system time
    google.protobuf.Timestamp ts = 2;
    // Requested protocol version, major.minor.patch
    string version = 3;
    // True if Base Station is bidirectional
    bool bidi = 4;
    // Vendor of the Base Station, optional
    optional string vendor = 5;
    // Model of the Base Station, optional
    optional string model = 6;
    // Name of the Base Station, optional
    optional string name = 7;
    // Software version, optional
    optional string sw_version = 8;
    // Geographic location [Latitude, Longitude, Altitude], optional
    optional GeoLocation geo_location = 9;
}

// Status
message BasestationStatus {
    // Status code, using POSIX error numbers, 0 for ok
    uint32 status_code = 2;
    // Status message
    string status_msg = 3;
    // Unix UTC system time
    google.protobuf.Timestamp ts = 4;
    // Fraction of TX time, sliding window over one hour
    float duty_cycle = 5;
    // Geographic location [Latitude, Longitude, Altitude], optional
    optional GeoLocation geo_location = 6;
    // System uptime in seconds, optional
    optional uint64 uptime = 7;
    // System temperature in degree Celsius, optional
    optional double temp = 8;
    // CPU utilization, normalized to 1.0 for all cores, optional
    optional double cpu = 9;
    // Memory utilization, normalized to 1.0, optional
    optional double memory = 10;
}

message GeoLocation {
    float lat = 1;
    float lon = 2;
    float alt = 3;
}

// The VM Status represents a list of the activated MAC-Types.
message BasestationVariableMacStatus{
    // List of activated macTypes
    repeated int64 mac_types = 2;
}